// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentRefinements - Connected expect to render a list of current refinements 1`] = `
<div
  className="cvi-CurrentRefinements"
>
  <ul
    className="cvi-CurrentRefinements-list"
  >
    <li
      className="cvi-CurrentRefinements-item"
      key="color: Red"
    >
      <span
        className="cvi-CurrentRefinements-label"
      >
        color: Red
      </span>
      <span
        className="cvi-CurrentRefinements-category"
      >
        <button
          className="cvi-CurrentRefinements-delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="cvi-CurrentRefinements-item"
      key="category:"
    >
      <span
        className="cvi-CurrentRefinements-label"
      >
        category:
      </span>
      <span
        className="cvi-CurrentRefinements-category"
        key="iPhone"
      >
        <span
          className="cvi-CurrentRefinements-categoryLabel"
        >
          iPhone
        </span>
        <button
          className="cvi-CurrentRefinements-delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
      <span
        className="cvi-CurrentRefinements-category"
        key="iPad"
      >
        <span
          className="cvi-CurrentRefinements-categoryLabel"
        >
          iPad
        </span>
        <button
          className="cvi-CurrentRefinements-delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements - Connected expect to render a list of current refinements with custom translations 1`] = `
<div
  className="cvi-CurrentRefinements"
>
  <ul
    className="cvi-CurrentRefinements-list"
  >
    <li
      className="cvi-CurrentRefinements-item"
      key="color: Red"
    >
      <span
        className="cvi-CurrentRefinements-label"
      >
        color: Red
      </span>
      <span
        className="cvi-CurrentRefinements-category"
      >
        <button
          className="cvi-CurrentRefinements-delete"
          onClick={[Function]}
        >
          DELETE
        </button>
      </span>
    </li>
    <li
      className="cvi-CurrentRefinements-item"
      key="category:"
    >
      <span
        className="cvi-CurrentRefinements-label"
      >
        category:
      </span>
      <span
        className="cvi-CurrentRefinements-category"
        key="iPhone"
      >
        <span
          className="cvi-CurrentRefinements-categoryLabel"
        >
          iPhone
        </span>
        <button
          className="cvi-CurrentRefinements-delete"
          onClick={[Function]}
        >
          DELETE
        </button>
      </span>
      <span
        className="cvi-CurrentRefinements-category"
        key="iPad"
      >
        <span
          className="cvi-CurrentRefinements-categoryLabel"
        >
          iPad
        </span>
        <button
          className="cvi-CurrentRefinements-delete"
          onClick={[Function]}
        >
          DELETE
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements expect to render a list of current refinements 1`] = `
<div
  className="cvi-CurrentRefinements"
>
  <ul
    className="cvi-CurrentRefinements-list"
  >
    <li
      className="cvi-CurrentRefinements-item"
      key="color: Red"
    >
      <span
        className="cvi-CurrentRefinements-label"
      >
        color: Red
      </span>
      <span
        className="cvi-CurrentRefinements-category"
      >
        <button
          className="cvi-CurrentRefinements-delete"
          onClick={[Function]}
        >
          clearFilter
        </button>
      </span>
    </li>
    <li
      className="cvi-CurrentRefinements-item"
      key="category:"
    >
      <span
        className="cvi-CurrentRefinements-label"
      >
        category:
      </span>
      <span
        className="cvi-CurrentRefinements-category"
        key="iPhone"
      >
        <span
          className="cvi-CurrentRefinements-categoryLabel"
        >
          iPhone
        </span>
        <button
          className="cvi-CurrentRefinements-delete"
          onClick={[Function]}
        >
          clearFilter
        </button>
      </span>
      <span
        className="cvi-CurrentRefinements-category"
        key="iPad"
      >
        <span
          className="cvi-CurrentRefinements-categoryLabel"
        >
          iPad
        </span>
        <button
          className="cvi-CurrentRefinements-delete"
          onClick={[Function]}
        >
          clearFilter
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements expect to render a list with a custom className 1`] = `
<div
  className="cvi-CurrentRefinements MyCustomCurrentRefinements"
>
  <ul
    className="cvi-CurrentRefinements-list"
  />
</div>
`;

exports[`CurrentRefinements expect to render a list without refinements 1`] = `
<div
  className="cvi-CurrentRefinements cvi-CurrentRefinements--noRefinement"
>
  <ul
    className="cvi-CurrentRefinements-list cvi-CurrentRefinements-list--noRefinement"
  />
</div>
`;
